<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageViewWelcomeScreen"
        android:layout_width="695dp"
        android:layout_height="293dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="#FBFBFB"
        android:backgroundTint="#FFFDFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gwent_logo"
        android:contentDescription="@string/ImageViewWelcomeScreen" />
</androidx.constraintlayout.widget.ConstraintLayout>