<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/host"
        android:title="Host" />

    <item
        android:id="@+id/join"
        android:title="Join" />
</menu>