...
        android:columnCount="1"
        android:rowCount="5"
        app:layout_constraintBottom_toTopOf="@+id/iv_profile_pic_user"
        app:layout_constraintEnd_toStartOf="@+id/gridLayout"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_pic_opponent">

        <ImageView
            android:id="@+id/iv_white_frost"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
...
